--- a/templates/polls/catset_update.html
+++ b/templates/polls/catset_update.html
@@ -3,5 +3,5 @@
 {% load smartmin %}
 
 {% block table_header_buttons %}
-    <a href="{% url catset_delete pollcategoryset.id%}" class="btn btn-destructive">Remove</a>
+    <a href="{% url "catset_delete" pollcategoryset.id%}" class="btn btn-destructive">Remove</a>
 {% endblock %}
