--- a/templates/polls/respondent_detail.html
+++ b/templates/polls/respondent_detail.html
@@ -57,7 +57,7 @@
         </div>
     <br clear="both"/>
 
-    <div style="margin-left:0px;margin-right:15px;"><a class="btn" href="{% url respondent_edit respondent.id %}">Edit Demographic Data</a></div>
+    <div style="margin-left:0px;margin-right:15px;"><a class="btn" href="{% url "respondent_edit" respondent.id %}">Edit Demographic Data</a></div>
     </div>
 
 
