--- a/templates/campaigns/campaign_list.html
+++ b/templates/campaigns/campaign_list.html
@@ -24,7 +24,7 @@
   </div>
   <div class="span4">
     {% if perms.campaigns.campaign_create %}
-    <a class="btn btn-block" style="margin-bottom:5px" href="{% url campaigns.campaign_create %}">Add Campaign</a>
+    <a class="btn btn-block" style="margin-bottom:5px" href="{% url "campaigns.campaign_create" %}">Add Campaign</a>
     {% endif %}
     {% include "sidebar.html" %}
   </div>
