--- a/templates/locations/list.html
+++ b/templates/locations/list.html
@@ -6,7 +6,7 @@
 <div id="map_bottom">
   <div id="location_form">
 
-      <form action="{% url add_location areatype.id %}" method="POST">
+      <form action="{% url "add_location" areatype.id %}" method="POST">
 
            {% csrf_token %}
           {{ form }}
