--- a/templates/polls/response_list.html
+++ b/templates/polls/response_list.html
@@ -6,12 +6,12 @@
 <div class="pull-right">
     {% if category %}
     {% if category == "_" %}
-    <a class="btn btn-primary" href="{% url response_categorization poll.id '_' %}">Categorize</a>
+    <a class="btn btn-primary" href="{% url "response_categorization" poll.id '_' %}">Categorize</a>
         {% else %}
-    <a class="btn btn-primary" href="{% url response_categorization poll.id category.id %}">Categorize</a>
+    <a class="btn btn-primary" href="{% url "response_categorization" poll.id category.id %}">Categorize</a>
         {% endif %}
         {% if category != "_" %}
-    <a class="btn" href="{% url poll_category_edit category.category_set.id category.id %}">Edit</a>
+    <a class="btn" href="{% url "poll_category_edit" category.category_set.id category.id %}">Edit</a>
       {% endif %}
     {% endif %}
 </div>
@@ -20,7 +20,7 @@
 {% block pre-content %}
 {% if poll %}
 <div class="poll_info">
-  <h2><a href="{% url poll_view poll.id %}">{{  poll.name }}</a></h2>
+  <h2><a href="{% url "poll_view" poll.id %}">{{  poll.name }}</a></h2>
   <p>{{ poll.description|safe }}</p>
 </div>
 {% endif %}
