--- a/templates/stories/tracfm_list.html
+++ b/templates/stories/tracfm_list.html
@@ -2,7 +2,7 @@
 
 {% block sidebar %}
 {% if perms.django_quickblocks.quickblock_create %}
-<a class="btn btn-block" href="{% url django_quickblocks.quickblock_create %}?type={{story_type.id}}">Add</a>
+<a class="btn btn-block" href="{% url "django_quickblocks.quickblock_create" %}?type={{story_type.id}}">Add</a>
 <br/>
 {% endif %}
 {% include "sidebar.html" %}
